# serde-save

./: Cargo.toml  README.md
examples/: serde_valuable.rs
src/: imp.rs  lib.rs  ser.rs
