[package]
name = "serde-save"
version = "0.1.1"
edition = "2021"
description = "the most complete serialization tree for serde"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/serde-save"
documentation = "https://docs.rs/serde-save"
repository = "https://github.com/aatifsyed/serde-save"

[dependencies]
serde = "1.0.198"

[dev-dependencies]
serde = { version = "1.0.198", features = ["derive"] }
valuable = "0.1.0"
